# michaelheilmann.com-arcadia

./: .gitignore  .htaccess  CMakeLists.txt  LICENSE.txt  Modules.mil  README.md  appveyor-linux.yml  appveyor-windows.yml  appveyor.yml  building-under-linux.md  building-under-windows-11-visual-studio-community-2022.md  delete-releases.ps1  error.html  index.html  install-dependencies.ps1  trim-trailing-spaces.ps1
.generator/: CMakeLists.txt  configure.h.i  file.c  file.h  main.c  stringbuffer.c  stringbuffer.h
Documentation/: CMakeLists.txt  about.html.te  cxx-doc.css.i  cxx-doc.css.te  data-protection-statement.html.te  error.html.te  error.html.tl  error.i  fonts-1.i  footer.i  imprint.html.te  index.css.i  index.css.te  index.css.tl  index.html.i  index.html.te  index.html.tl  index.i  news.html.te  news.html.tl  reset.css.te  roadmap-archive.html.te  roadmap-archive.html.tl  roadmap-archive.i  roadmap.html.te  roadmap.html.tl  roadmap.i  sitemap.xml.te  theme-1-colors.css.i  topic-css.i
Documentation/Arcadia/: CMakeLists.txt  index.html.te  news.html.te  roadmap-archive.html.te  roadmap.html.te  sitemap.xml.i
Documentation/Arcadia/Engine-Concepts/: CMakeLists.txt  index.html.te  main.i
Documentation/Arcadia/News/: news-2023-10-13.i  news-2023-10-23.i  news-2023-12-23.i  news-2024-02-11.i  news-2025-12-07.i  news-2025-12-24.i  news-2026-03-07.i  news-2026-03-30.i
Documentation/Arcadia/Roadmap/: Milestone-Arcadia.Ring2-6.i  Milestone-MIL-2.i
Documentation/AssortedNotes/: CMakeLists.txt  best-practices-for-access-tokens-angular-edition.html.te  information-security-data-security-and-data-privacy-commonalities-similarities-and-differences.html.te  setting-up-a-cloud-landing-zone-aws-edition.html.te  togaf-for-software-engineers-buy-in-edition.html.te  why-use-refresh-tokens-angular-edition.html.te
Documentation/Commons/: header-common.i  mathjax-definitions.i
Documentation/DataProtectionStatement/: Controller.i  DefinitionsOfTerms.i  OverviewOfProcessingActivities.i  RelevantLegalBases.i  RightsOfDataSubjects.i
Documentation/InformationSecurity/: CMakeLists.txt  best-practices-for-access-tokens-angular-edition.html.te  index.html.te  information-security-data-security-and-data-privacy-commonalities-similarities-and-differences.html.te  setting-up-a-cloud-landing-zone-aws-edition.html.te  togaf-for-software-engineers-buy-in-edition.html.te  why-use-refresh-tokens-angular-edition.html.te
Documentation/InformationSecurity/book/: 01-introduction.i  CMakeLists.txt  disclaimer.i  index.html.te
Documentation/Roadmap/: Milestone-Arbitrary_Precision_Arithmetic-1.i  Milestone-Arbitrary_Precision_Arithmetic-2.i  Milestone-Arcadia.Ring1-1.i  Milestone-Arcadia.Ring1-2.i  Milestone-Arcadia.Ring1-3.i  Milestone-Arcadia.Ring2-1.i  Milestone-Arcadia.Ring2-2.i  Milestone-Arcadia.Ring2-3.i  Milestone-Arcadia.Ring2-4.i  Milestone-Arcadia.Ring2-5.i  Milestone-Arcadia.Ring2-6.i  Milestone-Arcadia.Ring2-7.i  Milestone-Banner_Generator-2.i  Milestone-Cicd-1.i  Milestone-Icon_Generator-2.i  Milestone-Mil-2.i  Milestone-Runtime-1.i  Milestone-Runtime-2.i  Milestone-Template_Engine-2.i  Milestone-Website-5.i  Milestone-Website-7.i  Milestone-Website-8.i  Milestone-Website-9.i  Milestone10.i  Milestone2.2.i  Milestone2.i  Milestone3.i  Milestone7.i  Milestone8.i  Milestone9.i
Documentation/Roadmap/Archive/: Milestone-Arcadia.Ring2-2.i  Milestone-Arcadia.Ring2-4.i  Milestone-Mil-1.i  Milestone-Template_Engine-1.i  Milestone-Website-1.i  Milestone-Website-4.i  Milestone-Website-5.i  Milestone-Website-6.i  Milestone1.i  Milestone2.1.i  Milestone4.i  Milestone5.i  Milestone6.i  Milestone7.i
Documentation/Specifications/: specification.css.i
Documentation/Specifications/Cil/: index.i
Documentation/Specifications/Common Lexical Translations/: 0. Abstract.i  1. Introduction.i  2. Standard Profile.i  CMakeLists.txt  index.html.te
Documentation/Specifications/CommonLexicalSpecification/: 1. Grammars.i  2. Full Profile Lexical Specification.i  3. Full Profile Lexical Specification.i  index.html.te  index.i  index.tl
Documentation/Specifications/DDL/: CMakeLists.txt  index.html.te  index.te  index.tl  lexical-specification.i  lexical-translation.i  semantical-specification.i  (+3 more)
repository/: CMakeLists.txt
repository/Arcadia.Machine/: CMakeLists.txt
repository/Arcadia.Ring1/: CMakeLists.txt
repository/Arcadia.Ring2/: CMakeLists.txt
repository/Arms/: CMakeLists.txt
repository/Arms1/: CMakeLists.txt  index.html
repository/Cil/: CMakeLists.txt
repository/Cilc/: CMakeLists.txt
repository/Engine.Demo/: Arcadia.Engine.Demo.aps  Arcadia.Engine.Demo.rc  CMakeLists.txt
repository/Experimental/: CMakeLists.txt  _.c  _.h  game.c  game.h  main.c  os-commons.c  os-commons.h  os-windows-bitmap.c  os-windows-bitmap.h  os-windows-icon.c  os-windows-icon.h  os-windows.c  os-windows.h  sg.c  sg.h
repository/Integrations/: CMakeLists.txt
repository/MIL.Compiler/: CMakeLists.txt
repository/MIL.Frontend/: CMakeLists.txt
repository/Machine/: CMakeLists.txt
repository/Math/: CMakeLists.txt
repository/Module.Audials/: CMakeLists.txt
repository/Module.Visuals/: CMakeLists.txt
repository/R1/: CMakeLists.txt  index.html
repository/Ring1/: CMakeLists.txt
repository/Ring2/: CMakeLists.txt
repository/Tools.BitmapFontGenerator/: CMakeLists.txt
repository/Tools.Cilc/: CMakeLists.txt
repository/Tools.CompareFiles/: CMakeLists.txt
repository/Tools.Compiler/: CMakeLists.txt
repository/Tools.Concatenate/: CMakeLists.txt
repository/Tools.ConcatenateFiles/: CMakeLists.txt
repository/Tools.IconGenerator/: CMakeLists.txt
repository/Tools.RyuLookupTablesGenerator/: CMakeLists.txt
repository/Tools.TemplateEngine/: CMakeLists.txt
repository/arms1/: build-docs.ps1  index.html
repository/cmake/: all.cmake  configure_warnings_and_errors.cmake  detect_byte_order.cmake  detect_compiler.cmake  detect_instruction_set_architecture.cmake  detect_operating_system.cmake  openal.cmake
repository/data-lifecycle-management/: index.html
repository/r1/: build-docs.ps1  index.html
(+1878 files in other folders)
